Fixing text alignment in non-extension libraries.

--- a/src/components/library-item/library-item.css
+++ b/src/components/library-item/library-item.css
@@ -5,7 +5,7 @@
     display: flex;
     align-self: stretch;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     justify-content: flex-start;
     flex-basis: 160px;
     max-width: 160px;
